--- a/files/waybar/config
+++ b/files/waybar/config
@@ -95,7 +95,7 @@
     "custom/pacman": {
         "format": " {}",
         "interval": 3600,
-        "exec": "checkupdates | wc -l | sed -E 's/^0$/g'",
+        "exec": "checkupdates | wc -l | sed -E 's/^0$//g'",
         "exec-if": "exit 0",
         "on-click": "wezterm start -- yay; pkill -SIGRTMIN+8 waybar",
         "signal": 8,
