--- a/files/waybar/config
+++ b/files/waybar/config
@@ -15,6 +15,7 @@
             "9: sub": "",
             "2: chat": "",
             "3: mail": "",
+            "8: game": "",
             "10: media": "",
             "urgent": "",
             "focused": "",
