--- a/files/sway/config
+++ b/files/sway/config
@@ -18,9 +18,6 @@ font pango:monospace 12
 # output "*" bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 output "*" bg /usr/share/backgrounds/archlinux/small.png fill
 
-# output
-output eDP-1 scale 1
-
 # Custom keybindings
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +1%
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -1%
@@ -177,9 +174,10 @@ bindsym Mod4+Prior workspace prev
 bindsym Mod4+Next workspace next
 
 
-workspace $ws_main output primary
-workspace $ws_chat output primary
-workspace $ws_mail output primary
+workspace $ws_main output DP-1 DP-2
+workspace $ws_chat output DP-1 DP-2
+workspace $ws_mail output DP-1 DP-2
+workspace $ws_game output DP-1 DP-2
 workspace $ws_media output eDP-1
 workspace $ws_sub output eDP-1
 
