--- a/files/waybar/config
+++ b/files/waybar/config
@@ -56,6 +56,7 @@
     },
     "battery": {
         "states": {
+            "full": 100,
             // "good": 95,
             "warning": 30,
             "critical": 15
@@ -65,7 +66,7 @@
         "format-plugged": " {capacity}%",
         "format-alt": "{time} {icon}",
         // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
+        "format-full": "",
         "format-icons": ["", "", "", "", ""]
     },
     "pulseaudio": {
