--- a/files/sway/config
+++ b/files/sway/config
@@ -54,9 +54,9 @@ bindsym Control+semicolon  exec clipman pick -t rofi
 # screenlocker
 exec swayidle -w \
   timeout 300 'swaylock -f -C ~/.config/swaylock/config' \
-  timeout 600 'swaymsg "output * dpms off"' \
   timeout 1200 'systemctl suspend' \
-  resume 'swaymsg "output * dpms on"' \
+#  timeout 600 'swaymsg "output * dpms off"' \
+#  resume 'swaymsg "output * dpms on"' \
 
 bindsym $super+Shift+l exec swaylock -f -C ~/.config/swaylock/config
 
