--- a/files/sway/config
+++ b/files/sway/config
@@ -265,7 +265,7 @@ assign [class="Vivaldi-stable"] workspace $ws_main
 exec vivaldi-stable
 assign [app_id="org.wezfurlong.wezterm"] workspace $ws_main
 exec wezterm
-assign [class="Emacs"] workspace $ws_main
+assign [class="Emacs"] workspace $ws_sub
 exec emacs
 #assign [class="zoom"] workspace $ws_sub
 #for_window [app_id="zoom"] floating enable
