--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -9,6 +9,7 @@ brew "grep"
 brew "duf"
 brew "tree"
 brew "gnupg"
+brew "pinentry-mac"
 brew "cmigemo"
 brew "less"
 brew "nkf"
@@ -32,6 +33,9 @@ brew "pipx"
 brew "go"
 brew "hugo"
 brew "cmake"
+brew "shellcheck"
+brew "isync"
+brew "mu"
 tap "d12frosted/emacs-plus"
 brew "emacs-plus@28", args: ["with-native-comp"]
 tap "koekeishiya/formulae"
