--- a/files/sway/config
+++ b/files/sway/config
@@ -139,17 +139,17 @@ set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
 
-set $ws_main  "1: main"
-set $ws_chat  "2: chat"
-set $ws_mail  "3: mail"
-set $ws_game  "8: game"
-set $ws_sub   "9: sub"
-set $ws_media "10: media"
+set $ws_main    "1: main"
+set $ws_slack   "2: slack"
+set $ws_discord "3: disco"
+set $ws_game    "8: game"
+set $ws_sub     "9: sub"
+set $ws_media   "10: media"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws_main
-bindsym $mod+2 workspace number $ws_chat
-bindsym $mod+3 workspace number $ws_mail
+bindsym $mod+2 workspace number $ws_slack
+bindsym $mod+3 workspace number $ws_discord
 bindsym $mod+4 workspace number $ws4
 bindsym $mod+5 workspace number $ws5
 bindsym $mod+6 workspace number $ws6
@@ -160,8 +160,8 @@ bindsym $mod+0 workspace number $ws_media
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws_main
-bindsym $mod+Shift+2 move container to workspace number $ws_chat
-bindsym $mod+Shift+3 move container to workspace number $ws_mail
+bindsym $mod+Shift+2 move container to workspace number $ws_slack
+bindsym $mod+Shift+3 move container to workspace number $ws_discord
 bindsym $mod+Shift+4 move container to workspace number $ws4
 bindsym $mod+Shift+5 move container to workspace number $ws5
 bindsym $mod+Shift+6 move container to workspace number $ws6
@@ -259,7 +259,7 @@ for_window [class="Enpass"] {
     sticky enable
 }
 exec enpass -minimize
-assign [class="Slack"] workspace $ws_chat
+assign [class="Slack"] workspace $ws_slack
 exec  slack
 assign [class="Vivaldi-stable"] workspace $ws_main
 exec vivaldi-stable
