--- a/files/sway/config
+++ b/files/sway/config
@@ -267,6 +267,7 @@ assign [app_id="org.wezfurlong.wezterm"] workspace $ws_main
 exec wezterm
 assign [class="Emacs"] workspace $ws_sub
 exec emacs
+assign [class="discord"] workspace $ws_discord
 #assign [class="zoom"] workspace $ws_sub
 for_window [app_id="zoom"] floating enable
 exec blueman-applet
