--- a/files/sway/config
+++ b/files/sway/config
@@ -244,6 +244,8 @@ input type:touchpad {
 # sway-session
 exec_always "systemctl --user import-environment; systemctl --user start sway-session.target"
 
+exec_always autotiling -o DP-1 HDMI-A-2
+
 exec nm-applet --indicator
 exec mako
 exec fcitx5 -d
@@ -260,7 +262,7 @@ for_window [class="Enpass"] {
 }
 exec enpass -minimize
 assign [class="Slack"] workspace $ws_slack
-exec  slack
+exec slack
 assign [class="Vivaldi-stable"] workspace $ws_main
 exec vivaldi-stable
 assign [app_id="org.wezfurlong.wezterm"] workspace $ws_main
