--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -38,6 +38,8 @@ brew "shellcheck"
 brew "isync"
 brew "mu"
 brew "terminal-notifier"
+tap "wez/wezterm"
+cask "wez/wezterm/wezterm"
 tap "d12frosted/emacs-plus"
 brew "emacs-plus@28", args: ["with-native-comp"]
 tap "koekeishiya/formulae"
