Enable undo in aquaskk

--- a/files/aquaskk/keymap.conf
+++ b/files/aquaskk/keymap.conf
@@ -18,7 +18,7 @@ SKK_RIGHT		hex::0x1d||ctrl::f||keycode::7c
 SKK_UP			hex::0x1e||ctrl::a||keycode::7e
 SKK_DOWN		hex::0x1f||ctrl::e||keycode::7d
 SKK_PING		ctrl::l
-SKK_UNDO                ctrl::/
+# SKK_UNDO                ctrl::/
 
 # ======================================================================
 # attribute section(for SKK_CHAR)
