--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -64,6 +64,7 @@ cask "aquaskk"
 cask "karabiner-elements"
 cask "tunnelblick"
 cask "nextcloud"
+cask "libreoffice"
 mas "Kindle", id: 405399194
 mas "Slack", id: 803453959
 mas "The Unarchiver", id: 425424353
