--- a/files/rtx/config.toml
+++ b/files/rtx/config.toml
@@ -25,3 +25,6 @@ disable_default_shorthands = false # disable the default shorthands, see `RTX_DI
 experimental = true # enable experimental features such as shims
 shims_dir = '~/.local/share/rtx/shims' # [experimental] directory where shims are stored
 log_level = 'debug' # log verbosity, see `RTX_LOG_LEVEL`
+
+[tools]
+nodejs = "18.15.0"
