--- a/files/sway/config
+++ b/files/sway/config
@@ -137,55 +137,51 @@ bindsym $mod+semicolon scratchpad show
 
 
 # Workspaces:
+set $ws1 "1: main"
+set $ws2 "2: slack"
+set $ws3 "3: disco"
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
-
-set $ws_main    "1: main"
-set $ws_slack   "2: slack"
-set $ws_discord "3: disco"
-set $ws_game    "7: game"
-set $ws_gpt     "8: gpt"
-set $ws_sub     "9: sub"
-set $ws_media   "10: media"
+set $ws8 "8: game"
+set $ws9 "9: sub"
+set $ws0 "10: media"
 
 # switch to workspace
-bindsym $mod+1 workspace number $ws_main
-bindsym $mod+2 workspace number $ws_slack
-bindsym $mod+3 workspace number $ws_discord
+bindsym $mod+1 workspace number $ws1
+bindsym $mod+2 workspace number $ws2
+bindsym $mod+3 workspace number $ws3
 bindsym $mod+4 workspace number $ws4
 bindsym $mod+5 workspace number $ws5
 bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws_game
-bindsym $mod+8 workspace number $ws_gpt
-bindsym $mod+9 workspace number $ws_sub
-bindsym $mod+0 workspace number $ws_media
+bindsym $mod+7 workspace number $ws7
+bindsym $mod+8 workspace number $ws8
+bindsym $mod+9 workspace number $ws9
+bindsym $mod+0 workspace number $ws0
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws_main
-bindsym $mod+Shift+2 move container to workspace number $ws_slack
-bindsym $mod+Shift+3 move container to workspace number $ws_discord
+bindsym $mod+Shift+1 move container to workspace number $ws1
+bindsym $mod+Shift+2 move container to workspace number $ws2
+bindsym $mod+Shift+3 move container to workspace number $ws3
 bindsym $mod+Shift+4 move container to workspace number $ws4
 bindsym $mod+Shift+5 move container to workspace number $ws5
 bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws_game
-bindsym $mod+Shift+8 move container to workspace number $ws_gpt
-bindsym $mod+Shift+9 move container to workspace number $ws_sub
-bindsym $mod+Shift+0 move container to workspace number $ws_media
+bindsym $mod+Shift+7 move container to workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9
+bindsym $mod+Shift+0 move container to workspace number $ws0
 
 # move to worspace
 bindsym $mod+Prior workspace prev
 bindsym $mod+Next workspace next
 
 
-workspace $ws_main  output DP-1 DP-2 HDMI-A-2
-workspace $ws_chat  output DP-1 DP-2 HDMI-A-2
-workspace $ws_mail  output DP-1 DP-2 HDMI-A-2
-workspace $ws_game  output DP-1 DP-2 HDMI-A-2
-workspace $ws_gpt   output eDP-1 HDMI-A-3
-workspace $ws_media output eDP-1 HDMI-A-3
-workspace $ws_sub   output eDP-1 HDMI-A-3
+workspace $ws1 output DP-1 DP-2 HDMI-A-2
+workspace $ws2 output DP-1 DP-2 HDMI-A-2
+workspace $ws3 output DP-1 DP-2 HDMI-A-2
+workspace $ws9 output eDP-1 HDMI-A-3
+workspace $ws0 output eDP-1 HDMI-A-3
 
 
 # reload the configuration file
@@ -269,21 +265,20 @@ for_window [class="Enpass"] {
     sticky enable
 }
 exec enpass -minimize
-assign [class="Slack"] workspace $ws_slack
+assign [class="Slack"] workspace $ws2
 exec slack
-assign [class="Vivaldi-stable"] workspace $ws_main
+assign [class="Vivaldi-stable"] workspace $ws1
 exec vivaldi-stable
-assign [app_id="org.wezfurlong.wezterm"] workspace $ws_main
+assign [app_id="org.wezfurlong.wezterm"] workspace $ws1
 exec wezterm
-assign [class="Emacs"] workspace $ws_sub
+assign [class="Emacs"] workspace $ws9
 exec emacs
-assign [class="discord"] workspace $ws_discord
-#assign [class="zoom"] workspace $ws_sub
+assign [class="discord"] workspace $ws3
 for_window [app_id="zoom"] floating enable
 exec blueman-applet
 for_window [app_id="blueman-manager"] floating enable
-for_window [class="Google-chrome" title="YouTube Music"] move container to workspace number $ws_media
-for_window [class="Google-chrome" title="YouTube"] move container to workspace number $ws_media
+for_window [class="Google-chrome" title="YouTube Music"] move container to workspace number $ws0
+for_window [class="Google-chrome" title="YouTube"] move container to workspace number $ws0
 
 bar {
     swaybar_command waybar
