--- a/files/python/ruff/ruff.toml
+++ b/files/python/ruff/ruff.toml
@@ -5,7 +5,7 @@ cache-dir = "~/.cache/ruff"
 # https://beta.ruff.rs/docs/rules/
 #select = ["E", "W", "F", "B", "I", "RUF", "NPY", "TRY", "PLW", "PLR", "PLE", "PL", "PD", "PTH", "ARG", "SIM"]
 select = ["ALL"]
-ignore = ["E501", "PGH", "DJ", "D"]
+ignore = ["E501", "PGH", "DJ", "D", "T20", "ERA"]
 
 fixable = ["I", "SIM118"]
 unfixable = ["I002"]
