--- a/files/python/ruff/ruff.toml
+++ b/files/python/ruff/ruff.toml
@@ -7,8 +7,8 @@ cache-dir = "~/.cache/ruff"
 select = ["ALL"]
 ignore = ["E501", "PGH", "DJ", "D", "T20", "ERA"]
 
-fixable = ["I", "SIM118"]
-unfixable = ["I002"]
+fixable = ["I", "F401", "SIM118"]
+unfixable = []
 
 # Exclude a variety of commonly ignored directories.
 exclude = [
