Update yabai & skhd

--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -41,13 +41,11 @@ brew "shellcheck"
 brew "isync"
 brew "mu"
 brew "terminal-notifier"
-tap "wez/wezterm"
-cask "wez/wezterm/wezterm"
+cask "wezterm"
 tap "d12frosted/emacs-plus"
 brew "emacs-plus@29", args: ["with-native-comp"]
-tap "koekeishiya/formulae"
-brew "yabai"
-brew "skhd"
+brew "koekeishiya/formulae/yabai"
+brew "koekeishiya/formulae/skhd"
 cask "monitorcontrol"
 cask "alfred"
 cask "discord"
