Add bitwarden for mac

--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -72,3 +72,4 @@ mas "GoodNotes", id: 1444383602
 mas "Dictonaries", id: 1380563956
 mas "MeetingBar", id: 1532419400
 mas "WireGuard", id: 1451685025
+mas "Bitwarden", id: 1352778147
