--- a/files/sway/config
+++ b/files/sway/config
@@ -256,7 +256,7 @@ exec kdeconnect-indicator
 
 for_window [app_id="pavucontrol"] floating enable
 for_window [app_id="org.fcitx.fcitx5-config-qt"] floating enable
-for_window [class="Nextcloud"] floating enable
+for_window [app_id="com.nextcloud.desktopclient.nextcloud"] floating enable
 for_window [app_id="thunar" title="File Operation Progress"] floating enable
 for_window [app_id="nm-connection-editor"] floating enable
 exec nextcloud --background
