--- a/files/python/ruff/ruff.toml
+++ b/files/python/ruff/ruff.toml
@@ -5,9 +5,9 @@ cache-dir = "~/.cache/ruff"
 # https://beta.ruff.rs/docs/rules/
 #select = ["E", "W", "F", "B", "I", "RUF", "NPY", "TRY", "PLW", "PLR", "PLE", "PL", "PD", "PTH", "ARG", "SIM"]
 select = ["ALL"]
-ignore = ["E501", "PGH", "DJ", "D", "T20", "ERA", "C90"]
+ignore = ["E501", "PGH", "DJ", "D", "T20", "ERA", "C90", "ANN101"]
 
-fixable = ["I", "F401", "SIM118"]
+fixable = ["I", "SIM118"]
 unfixable = []
 
 # Exclude a variety of commonly ignored directories.
