--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -57,6 +57,7 @@ cask "google-chrome"
 cask "google-drive"
 cask "vlc"
 cask "zotero"
+cask "tunnelblick"
 cask "stats"
 cask "anki"
 cask "font-cica"
