--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -52,6 +52,7 @@ cask "alfred"
 cask "discord"
 cask "notion"
 cask "zoom"
+cask "firefox"
 cask "vivaldi"
 cask "google-chrome"
 cask "google-drive"
