Add support for pam-reattach on arm64

--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -37,6 +37,7 @@ brew "iproute2mac"
 brew "go"
 brew "hugo"
 brew "cmake"
+brew "pam-reattach" # for TouchID with sudo
 brew "unar"
 brew "shellcheck"
 brew "isync"
