--- a/files/rtx/config.toml
+++ b/files/rtx/config.toml
@@ -26,4 +26,4 @@ experimental = true # enable experimental features such as shims
 log_level = 'debug' # log verbosity, see `RTX_LOG_LEVEL`
 
 [tools]
-nodejs = "20.3.0"
+node = "20.3.0"
