--- a/files/xremap/xremap.service
+++ b/files/xremap/xremap.service
@@ -4,7 +4,7 @@ BindsTo=sway-session.target
 
 [Service]
 KillMode=process
-ExecStart=%h/.local/share/cargo/bin/xremap %h/.config/xremap/config.yml --watch
+ExecStart=%h/.local/share/cargo/bin/xremap %h/.config/xremap/config.yml --watch=device
 ExecStop=/usr/bin/killall xremap
 Type=simple
 Restart=always
