Add PlemolJP font

--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -64,6 +64,7 @@ cask "tunnelblick"
 cask "stats"
 cask "anki"
 cask "font-cica"
+cask "font-plemol-jp"
 cask "appcleaner"
 cask "aquaskk"
 cask "karabiner-elements"
