--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -7,6 +7,10 @@ set -g @plugin 'laktak/extrakto'
 set -g @extrakto_fzf_tool "~/.local/share/fzf/bin/fzf"
 set -g @extrakto_split_direction "v"
 set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 
 # prefixキーをC-qに変更する
 set -g prefix C-q
@@ -69,6 +73,7 @@ set -g visual-activity off
 
 bind g popup -w90% -h90% -d '#{pane_current_path}' -E lazygit
 bind o popup -w90% -h90% -E $HOME/.local/bin/tmux_session.sh
+bind n popup -w90% -h90% -E 'window=$(tmux display -p -F "#S:#I.#P") && export FZF_DEFAULT_OPTS="-m --layout=reverse --border" && navi --print | tr -d "\n" | tmux load-buffer -b tmp - && tmux paste-buffer -drp -t $window -b tmp'
 
 # tpm initlize
 run '~/.config/tmux/plugins/tpm/tpm'
