Enable "emacs yank & region to clipboard on tmux in ssh"

--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -12,6 +12,8 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
+set -g set-clipboard on
+
 # prefixキーをC-qに変更する
 set -g prefix C-q
 
