--- a/files/python/ruff/ruff.toml
+++ b/files/python/ruff/ruff.toml
@@ -1,21 +1,13 @@
 # cache-dir
 cache-dir = "~/.cache/ruff"
 
-# Enable rules.
-# https://beta.ruff.rs/docs/rules/
-#select = ["E", "W", "F", "B", "I", "RUF", "NPY", "TRY", "PLW", "PLR", "PLE", "PL", "PD", "PTH", "ARG", "SIM"]
-select = ["ALL"]
-ignore = ["E501", "PGH", "DJ", "D", "T20", "ERA", "C90", "ANN101", "FA102", "RUF001", "PLR0915", "S101", "S311", "S104"]
-
-fixable = ["I", "SIM118"]
-unfixable = []
-
 # Exclude a variety of commonly ignored directories.
 exclude = [
     ".bzr",
     ".direnv",
     ".eggs",
     ".git",
+    ".git-rewrite",
     ".hg",
     ".mypy_cache",
     ".nox",
@@ -33,3 +25,27 @@ exclude = [
     "node_modules",
     "venv",
 ]
+
+line-length = 300
+indent-width = 4
+
+
+[lint]
+select = ["ALL"]
+ignore = ["E501", "PGH", "DJ", "D", "T20", "ERA", "C90", "ANN101", "FA102", "RUF001", "PLR0915", "S101", "S311", "S104"]
+
+fixable = ["I", "SIM118"]
+unfixable = []
+
+[format]
+# Like Black, use double quotes for strings.
+quote-style = "double"
+
+# Like Black, indent with spaces, rather than tabs.
+indent-style = "space"
+
+# Like Black, respect magic trailing commas.
+skip-magic-trailing-comma = false
+
+# Like Black, automatically detect the appropriate line ending.
+line-ending = "auto"
