--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -73,8 +73,8 @@ set -g status-position top
 setw -g monitor-activity off
 set -g visual-activity off
 
-bind t popup -w90% -h90% -d '#{pane_current_path}' -E zsh
-bind h popup -w90% -h90% -E htop
+bind s popup -w90% -h90% -d '#{pane_current_path}' -E zsh
+bind t popup -w90% -h90% -E htop
 bind g popup -w90% -h90% -d '#{pane_current_path}' -E lazygit
 bind o popup -w90% -h90% -E $HOME/.local/bin/tmux_session.sh
 bind n popup -w90% -h90% -E 'window=$(tmux display -p -F "#S:#I.#P") && export FZF_DEFAULT_OPTS="-m --layout=reverse --border" && navi --print | tr -d "\n" | tmux load-buffer -b tmp - && tmux paste-buffer -drp -t $window -b tmp'
