--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -34,6 +34,7 @@ brew "wget"
 brew "bash"
 brew "zsh"
 brew "iproute2mac"
+brew "imagemagick" # for dirvish in emacs
 brew "go"
 brew "hugo"
 brew "cmake"
