--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -33,7 +33,7 @@ brew "wget"
 brew "bash"
 brew "zsh"
 brew "iproute2mac"
-brew "imagemagick" # for dirvish in emacs
+brew "imagemagick" # for emacs
 brew "go"
 brew "hugo"
 brew "cmake"
@@ -53,7 +53,6 @@ cask "google-chrome"
 cask "google-drive"
 cask "vlc"
 cask "zotero"
-cask "tunnelblick"
 cask "stats"
 cask "anki"
 cask "font-cica"
