--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -56,7 +56,7 @@ cask "zotero"
 cask "stats"
 cask "anki"
 cask "font-cica"
-cask "font-plemol-jp"
+cask "font-plemol-jp-nf"
 cask "appcleaner"
 cask "aquaskk"
 cask "karabiner-elements"
