--- a/files/sway/config
+++ b/files/sway/config
@@ -52,7 +52,7 @@ bindsym $super+Control+space exec "rofi -show combi"
 # clipboard
 # watched the clipboard and sends any new item to 'myclipman'
 exec wl-paste -t text --watch ~/.config/sway/scripts/myclipman
-bindsym Control+semicolon  exec clipman pick -t rofi
+bindsym Control+Shift+semicolon  exec clipman pick -t rofi
 bindsym $super+Control+c exec clipman pick -t rofi
 
 # screenlocker
