--- a/files/homebrew/Brewfile
+++ b/files/homebrew/Brewfile
@@ -42,6 +42,7 @@ brew "shellcheck"
 cask "wezterm"
 brew "koekeishiya/formulae/yabai"
 brew "koekeishiya/formulae/skhd"
+brew "FelixKratz/formulae/sketchybar"
 cask "monitorcontrol"
 cask "alfred"
 cask "discord"
@@ -56,6 +57,7 @@ cask "stats"
 cask "anki"
 cask "font-cica"
 cask "font-plemol-jp-nf"
+cask "font-hack-nerd-font" # for sketchybar
 cask "appcleaner"
 cask "aquaskk"
 cask "karabiner-elements"
