--- a/files/tmux/tmux.conf
+++ b/files/tmux/tmux.conf
@@ -7,10 +7,10 @@ set -g @plugin 'laktak/extrakto'
 set -g @extrakto_fzf_tool "~/.local/share/fzf/bin/fzf"
 set -g @extrakto_split_direction "v"
 set -g @plugin 'arcticicestudio/nord-tmux'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @resurrect-capture-pane-contents 'on'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @continuum-restore 'on'
 
 set -g set-clipboard on
 
